# codec-cdn-from-scratch

./: .dockerignore  .eslintrc.js  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  RUST_README.md  decoded-large.txt  decoded.json  decoded.txt  large-demo.tcf  medium.txt  movie.torrent  package-lock.json  package.json  render.yaml  sample.torrent  test-large.tcf  test-medium.tcf  test-small.tcf  test.bencode  test.json  test.tcf
benches/: compression_benchmarks.rs  tcf_benchmark.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: bitstream.rs  error.rs  lib.rs
crates/entropy/: Cargo.toml
crates/entropy/src/: lib.rs  range_coder.rs
crates/tcf/: Cargo.toml
crates/tcf/src/: decoder.rs  encoder.rs  format.rs  lib.rs  model.rs
docs/: QUICKSTART.md  image-codec-readme.md  text-codec-readme.md  video-codec-readme.md
examples/: demo.sh  sample.tcf  sample.txt
src/: index.ts  lib.rs
src/codecs/: mod.rs
src/codecs/bencode/: bencode_codec.rs  bencode_value.rs  mod.rs
src/codecs/image/: dct_transform.rs  icf-cli.ts  icf-codec.ts  icf_codec.rs  mod.rs  quantization.rs
src/codecs/text/: arithmetic_coder.rs  mod.rs  simple_coder.rs  simple_tcf.rs  tcf-cli.ts  tcf-codec.ts  tcf_codec.rs
src/codecs/video/: inter_prediction.rs  mod.rs  motion_estimation.rs  vcf-cli.ts  vcf-codec.ts  vcf_codec.rs
static/: app.js  index.html  index_old.html
tests/: tcf_integration.rs
